update: update turbo config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
   "private": true,
   "workspaces": [
     "apps/*",
@@ -7,43 +6,19 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
-    "typecheck": "turbo run typecheck",
+    "dev": "turbo run dev --no-cache --parallel",
+    "hardhat:compile": "turbo run compile --scope=contracts",
+    "hardhat:node": "turbo run node --scope=contracts",
     "test": "turbo run test",
-    "codegen": "turbo run codegen",
     "prettier": "prettier --check \"**/*.{ts,tsx,md}\"",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prepare": "husky install",
     "storybook": "turbo run storybook",
-    "build-storybook": "turbo run build-storybook"
-  },
-  "turbo": {
-    "pipeline": {
-      "build": {
-        "dependsOn": [
-          "^build"
-        ],
-        "outputs": [
-          "dist/**",
-          ".next/**"
-        ]
-      },
-      "lint": {
-        "outputs": []
-      },
-      "dev": {
-        "cache": false
-      },
-      "storybook": {
-        "cache": false
-      },
-      "build-storybook": {
-        "outputs": [
-          "storybook-static/**"
-        ]
-      }
-    }
+    "build-storybook": "turbo run build-storybook",
+    "clean": "turbo run clean && rm -rf node_modules",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix --parallel",
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "husky": "^8.0.2",
@@ -52,7 +27,7 @@
   },
   "engines": {
     "npm": ">=7.0.0",
-    "node": ">=14.0.0"
+    "node": ">=16"
   },
   "packageManager": "yarn@1.22.19"
 }
