--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "APP_ENV=development PORT=8080 next dev ",
+    "dev": "PORT=8080 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
