--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,9 +5,7 @@
   "license": "MIT",
   "files": [
     "eslint-next.js",
-    "eslint-server.js",
-    "jest-next.js",
-    "jest-server.js"
+    "jest-next.js"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
