--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "turbo run dev --no-cache --parallel",
     "hardhat:compile": "turbo run compile --scope=contracts",
     "hardhat:node": "turbo run node --scope=contracts",
+    "hardhat:test": "turbo run sol:test --scope=contracts",
     "test": "turbo run test",
     "prettier": "prettier --check \"**/*.{ts,tsx,md}\"",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx,md}\"",
