--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "esbuild-jest": "^0.5.0",
     "lint-staged": "^12.1.3",
     "husky": "^8.0.2",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "tailwindcss": "^3.0.23",
     "prettier": "latest",
     "turbo": "latest",
     "identity-obj-proxy": "^3.0.0",
