--- a/package.json
+++ b/package.json
@@ -48,20 +48,20 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
+    "autoprefixer": "^10.4.2",
     "esbuild": "^0.14.10",
     "esbuild-jest": "^0.5.0",
-    "lint-staged": "^12.1.3",
     "husky": "^8.0.2",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.6",
-    "prettier-plugin-tailwindcss": "^0.1.7",
-    "tailwindcss": "^3.0.23",
-    "prettier": "latest",
-    "turbo": "latest",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.7",
     "jest-watch-typeahead": "^1.0.0",
-    "msw": "^0.36.3"
+    "lint-staged": "^12.1.3",
+    "msw": "^0.36.3",
+    "postcss": "^8.4.6",
+    "prettier": "latest",
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "tailwindcss": "^3.0.23",
+    "turbo": "latest"
   },
   "engines": {
     "npm": ">=7.0.0",
