--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
-    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-next": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
