--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,12 +1,37 @@
 {
   "name": "lib",
   "version": "0.0.0",
-  "main": "./dist/index",
-  "types": "./dist/index",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc --build --force tsconfig.json"
   },
   "devDependencies": {
-    "typescript": "^4.5.2"
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@types/chai": "^4.3.1",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^15.6.1",
+    "@types/set-interval-async": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "axios": "^0.27.2",
+    "chai": "^4.3.6",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "ethers": "5.6.9",
+    "hardhat": "^2.9.9",
+    "jest": "^28.1.1",
+    "ts-jest": "^28.0.4",
+    "ts-node": "^10.8.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.3"
   }
 }
