--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.javascript linguist-detectable=false
+*.html linguist-detectable=false
+*.css linguist-detectable=false
+*.js linguist-detectable=false
