--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "files": [
     "eslint-next.js",
-    "jest-next.js"
+    "jest-next.js",
+    "prettier-next.js"
   ],
   "dependencies": {
+    "prettier": "^2.8.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint-config-airbnb": "^18.2.1",
