--- a/apps/contracts/tsconfig.json
+++ b/apps/contracts/tsconfig.json
@@ -1,16 +1,5 @@
 {
-  "compilerOptions": {
-    "target": "ES2017",
-    "module": "commonjs",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "outDir": "./dist",
-    "strict": true,
-    "rootDirs": ["./src", "./scripts", "./test"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-  },
+  "extends": "tsconfig/contract.json",
   "exclude": ["dist", "node_modules"],
   "include": ["./test", "./src", "./scripts"],
   "files": ["./hardhat.config.ts"]
