--- a/apps/contracts/package.json
+++ b/apps/contracts/package.json
@@ -25,7 +25,8 @@
     "lint:fix": "yarn prettier --write **/*",
     "sol:test": "npx hardhat coverage --testfiles \"test/*.ts\" --solcoverjs .solcover.js",
     "test-specific": "mocha -g",
-    "test:gas": "UPDATE_SNAPSHOT=1 yarn test --grep gas"
+    "test:gas": "UPDATE_SNAPSHOT=1 yarn test --grep gas",
+    "ci:clean": "rm -rf ./artifacts ./cache .;types"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -49,11 +50,11 @@
     "husky": "^7.0.0",
     "lint-staged": "^11.0.0",
     "mocha": "^9.2.0",
-    "prettier": "2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
+    "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.17",
+    "solidity-coverage": "^0.7.18",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.0.0",
     "typechain": "^8.1.0",
