--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "packageManager": "yarn@1.22.19",
   "lint-staged": {
-    "apps/web/*.{js,ts,jsx,tsx}": [
+    "apps/**/*.{js,ts,jsx,tsx}": [
       "eslint --fix"
     ],
     "packages/ui/**/*.{js,ts,jsx,tsx}": [
