--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --no-cache --parallel",
     "hardhat:compile": "turbo run compile --scope=contracts",
-    "hardhat:node": "turbo run node --scope=contracts",
+    "hardhat:node": "turbo run start --scope=contracts",
     "hardhat:test": "turbo run sol:test --scope=contracts",
     "test": "turbo run test",
     "prettier": "prettier --check \"**/*.{ts,tsx,md}\"",
