--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -1,23 +1,6 @@
 {
-  "extends": "../tsconfig/base.json",
-  "compilerOptions": {
-    "module": "commonjs",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noImplicitAny": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
-  },
-  "files": [],
-  "include": [],
-  "references": [
-    {
-      "path": "./tsconfig.lib.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
-  ]
+  "extends": "tsconfig/contract.json",
+  "exclude": ["dist", "node_modules"],
+  "include": ["./test", "./src", "./scripts", "index.ts"],
+  "files": ["./hardhat.config.ts"]
 }
