--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,15 +10,15 @@
     "typechain": "typechain --out-dir src/config/abi/types --target=ethers-v5 \"src/config/abi/*.json\""
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^0.8.1",
     "@typechain/ethers-v5": "^10.1.0",
-    "ethers": "^5.7.0",
+    "ethers": "^5.0.0",
+    "framer-motion": "^7.3.6",
     "next": "^13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "typechain": "^8.1.0",
-    "wagmi": "^0.6.4"
+    "wagmi": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
