--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,12 +13,17 @@
     "@typechain/ethers-v5": "^10.1.0",
     "ethers": "^5.0.0",
     "framer-motion": "^7.3.6",
-    "next": "^13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "typechain": "^8.1.0",
-    "wagmi": "^0.12.0"
+    "wagmi": "^0.12.10",
+    "web3": "^1.7.1",
+    "web3-utils": "1.7.1",
+    "yup": "^0.32.11",
+    "next": "^13.3.0",
+    "next-seo": "^5.15.0",
+    "next-sitemap": "^4.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.13",
@@ -29,6 +34,9 @@
     "eslint-config-next": "12.2.5",
     "lib": "*",
     "tsconfig": "*",
-    "typescript": "4.8.2"
+    "tailwind-merge": "^1.8.0",
+    "classnames": "^2.3.1",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^4.9.5"
   }
 }
